--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ a {
   padding-block: 93px;
 }
 /**Logo w stópce i w header **/
-.footer-logo {
+.footer-bg__logo {
   font-family: Raleway;
   font-size: 26px;
   font-weight: 700;
@@ -37,7 +37,7 @@ a {
   color: var(--darkbd-fontcolor);
   text-decoration: none;
 }
-.head-logo {
+.main-header__logo {
   font-family: Raleway;
   font-size: 26px;
   font-weight: 700;
@@ -47,21 +47,16 @@ a {
   margin: 0;
   margin-right: 93px;
 }
-.webname {
+.logo--color {
   color: var(--focus-active-hovercolor);
-  font-family: Raleway;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
 }
 /** Header (Nawigacja górna strony) **/
-.head-container {
+.main-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.header-nav {
+.main-header__nav{
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -70,10 +65,10 @@ a {
   padding: 0;
 }
 
-.is-active {
+.current{
   position: relative;
 }
-.is-active::after {
+.current::after {
   content: "";
   position: absolute;
   bottom: -33px;
@@ -87,13 +82,13 @@ a {
   border-bottom: 1px solid #ececec;
   width: 1600px;
 }
-.menu {
+.main-header__menu {
   display: flex;
   gap: 23px;
   align-items: baseline;
   justify-content: space-between;
 }
-.submenu {
+.main-header__submenu {
   font-weight: 500;
   font-size: var(--mainfont-size);
   line-height: 1.14;
@@ -103,14 +98,14 @@ a {
   padding-right: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.submenu:hover,
-.submenu:focus {
+.main-header__submenu:hover,
+.main-header__submenu:focus {
   color: var(--focus-active-hovercolor);
 }
-.submenu:active {
+.main-header__submenu:active {
   color: var(--focus-active-hovercolor);
 }
-.contacts {
+.main-header__contacts {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -123,12 +118,12 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts:hover,
-.contacts:focus {
+.main-header__contacts:hover,
+.main-header__contacts:focus {
   color: var(--focus-active-hovercolor);
   fill: var(--focus-active-hovercolor);
 }
-.list-style {
+.main-header__list {
   list-style: none;
   display: flex;
   gap: 50px;
@@ -440,12 +435,12 @@ a {
   margin-bottom: 50px;
 }
 /** Wnętrze Stron **/
-.nav-icons {
+.main-header__icons{
   margin-right: 10px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-icons:hover,
-.nav-icons:focus {
+.main-header__icons:hover,
+.main-header__icons:focus {
   color: var(--focus-active-hovercolor);
 }
 .upper-body {
@@ -573,7 +568,7 @@ a {
   color: var(--shadowfontcolor);
   text-align: center;
 }
-.main-header {
+.header {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -667,7 +662,7 @@ a {
   padding: 0;
 }
 /** Zawartość Stopki **/
-.foot {
+.footer-bg__link {
   color: rgba(255, 255, 255, 0.6);
   font-size: var(--mainfont-size);
   font-style: normal;
@@ -676,11 +671,11 @@ a {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.foot:hover,
-.foot:focus {
+.footer-bg__link:hover,
+.footer-bg__link:focus {
   color: var(--focus-active-hovercolor);
 }
-.footaddres {
+.footer-bg__addres {
   font-size: var(--mainfont-size);
   line-height: 1.71;
   font-style: normal;
@@ -705,15 +700,15 @@ a {
   margin-top: 0;
   margin-bottom: 0;
 }
-.contacts-ft {
+.footer-bg__contacts {
   padding-block: 4.5px;
   margin: 0;
   transition: var(--animation-main);
 }
-.contacts-ft:hover {
+.footer-bg__contacts:hover {
   transform: translate(20%);
 }
-.join {
+.footer-bg__join{
   font-weight: 700;
   font-size: var(--mainfont-size);
   line-height: 1.14;
@@ -729,7 +724,7 @@ a {
   align-items: baseline;
   gap: 70px;
 }
-.icons {
+.footer-bg__icons {
   list-style: none;
   display: flex;
   flex-direction: row;
@@ -758,7 +753,7 @@ a {
   cursor: pointer;
   transform: scale(1.3) rotate(360deg);
 }
-.social-media-ft {
+.footer-bg__social{
   display: block;
   width: 44px;
   height: 44px;
@@ -769,17 +764,17 @@ a {
   transition: var(--animation-main),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-media-ft use {
+.footer-bg__social use {
   display: block;
   transform: translate(25%, 25%);
 }
-.social-media-ft:hover,
-.social-media-ft:focus {
+.footer-bg__social:hover,
+.footer-bg__social:focus {
   background-color: var(--focus-active-hovercolor);
   cursor: pointer;
   transform: scale(0.9);
 }
-.ft-input {
+.footer-bg__input {
   width: 358px;
   height: 50px;
   background-color: #2f303a;
@@ -787,13 +782,46 @@ a {
   border-radius: 4px;
   color: var(--darkbd-fontcolor);
 }
-.ft-form {
+.footer-bg__form{
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: center;
   gap: 12px;
+  position: relative;
 }
+.footer-bg__send-email{
+  background-color: var(--focus-active-hovercolor);
+  color: var(--darkbd-fontcolor);
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  fill: var(--darkbd-fontcolor);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  transition: var(--animation-main);
+}
+.footer-bg__send-email:hover,
+.footer-bg__send-email:focus {
+  transform: scale(0.9);
+}
+.footer-bg__send-email > p {
+  padding: 10px 76px 10px 42px;
+  margin: 0;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
+.footer-bg__send-icon{
+  position: absolute;
+  top: 13px;
+  right: 28px;
+}
+
 .send-email {
   background-color: var(--focus-active-hovercolor);
   color: var(--darkbd-fontcolor);
@@ -819,9 +847,4 @@ a {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-}
-.send-icon {
-  position: absolute;
-  top: 13px;
-  right: 28px;
 }
