--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ a {
   border-color: var(--focus-active-hovercolor);
   cursor: pointer;
 }
-.mainbtn {
+.main-button-space__button {
   background-color: var(--focus-active-hovercolor);
   color: var(--darkbd-fontcolor);
   font-weight: 700;
@@ -186,7 +186,7 @@ a {
   margin-bottom: 200px;
   transition: var(--animation-main);
 }
-.mainbtn:hover {
+.main-button-space__button:hover {
   transform: scale(1.1);
 }
 .is-hidden {
@@ -224,12 +224,12 @@ a {
   visibility: visible;
   display: block;
   border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:var(--animation-main);
 }
 .modal .modal-win {
   transform: translate(0, 0) scale(1);
 }
-.close-btn {
+.modal-win__close-btn {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -242,14 +242,14 @@ a {
   top: 8px;
   right: 8px;
 }
-.modal-context {
+.modal-win__context {
   display: flex;
   flex-direction: column;
   padding-inline: 40px;
   width: 528px;
   height: 581px;
 }
-.modal-text {
+.modal-win__text {
   margin-top: 40px;
   margin-bottom: 30px;
   font-weight: 700;
@@ -259,31 +259,31 @@ a {
   color: var(--mainfontcolor);
   line-height: 1.15;
 }
-.form-space {
+.form {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.form-space > label {
+.form > label {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
-.label-text {
+.form__label-text {
   margin: 0;
   margin-bottom: 4px;
   font-size: 12px;
   color: var(--shadowfontcolor);
   line-height: 1.16;
 }
-.input-size {
+.form__input {
   width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 2px;
 }
-.comment-space {
+.form_textarea {
   height: 120px;
   font-size: 12px;
   line-height: 14px;
@@ -292,38 +292,38 @@ a {
   border: 1px solid rgba(33, 33, 33, 0.2);
   padding: 12px 16px;
 }
-.comment-space:focus,
-.comment-space:active,
-.comment-space:hover {
+.form_textarea:focus,
+.form_textarea:active,
+.form_textarea:hover {
   border-color: var(--focus-active-hovercolor);
   outline: none;
 }
-.form-space .space {
+.form__space {
   position: relative;
 }
-.form-icons {
+.form__icons {
   position: absolute;
   margin: 11px 12px;
   top: 26px;
   transform: translateY(-50%);
 }
-.icon-color {
+.form__icon-size{
   height: 100%;
   width: 100%;
 }
-.form-space .input-size {
+.form .form__input {
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: none;
 }
-.form-space .input-size:active,
-.form-space .input-size:focus {
+.form .form__input:active,
+.form .form__input:focus {
   border-color: var(--focus-active-hovercolor);
   outline: none;
   fill: var(--focus-active-hovercolor);
 }
-.space:focus-within .form-icons,
-.space:active .form-icons {
+.form__space:focus-within .form__icons,
+.form__space:active .form__icons {
   fill: var(--focus-active-hovercolor);
   outline: none;
   outline-offset: 0px;
@@ -377,7 +377,7 @@ a {
   margin-bottom: 40px;
   font-size: 16px;
 }
-.checkbox-item {
+.form__checkbox {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -392,7 +392,7 @@ a {
   color: var(--shadowfontcolor);
   margin: 0;
 }
-.custom-checkbox {
+.form__checkbox-custom {
   height: 15px;
   width: 16px;
   background-color: var(--darkbd-fontcolor);
@@ -408,7 +408,7 @@ a {
   left: -1px;
   border-radius: 2px;
 }
-.custom-checkbox:checked + label .checkbox-icon {
+.form__checkbox-custom:checked + label .checkbox-icon {
   visibility: visible;
   background-color: var(--focus-active-hovercolor);
   fill: var(--darkbd-fontcolor);
@@ -503,7 +503,7 @@ a {
   letter-spacing: 0.03em;
   line-height: 1.55;
 }
-.mainbgcolor {
+.main-button-space {
   background-color: #2f303a;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/main-bg-picture.jpg);
@@ -568,7 +568,7 @@ a {
   color: var(--shadowfontcolor);
   text-align: center;
 }
-.header {
+.main-button-space__text{
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
