--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,59 +1,58 @@
 @use "./utils/variables.scss" as *;
 @import "./components/navigations.scss";
 
-
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: var(--darkbd-fontcolor);
-    color: var(--mainfontcolor);
-    margin: 0 auto;
-    max-width: 1600px;
-    font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  background-color: var(--darkbd-fontcolor);
+  color: var(--mainfontcolor);
+  margin: 0 auto;
+  max-width: 1600px;
+  font-size: 16px;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.main-header__menu{
-    display: inherit;
-    gap: 23px;
-    align-items: baseline;
-    justify-content: space-between;
+.main-header__menu {
+  display: inherit;
+  gap: 23px;
+  align-items: baseline;
+  justify-content: space-between;
 }
-.main-header__nav{
-    display: inherit;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  .main-header__logo {
-    font-family: Raleway;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: black;
-    margin: 0;
-    margin-right: 93px;
-  }
-  .main-header__logo--color {
-    color: var(--focus-active-hovercolor);
-  }
+.main-header__nav {
+  display: inherit;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.main-header__logo {
+  font-family: Raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: black;
+  margin: 0;
+  margin-right: 93px;
+}
+.main-header__logo--color {
+  color: var(--focus-active-hovercolor);
+}
 .main-header__submenu {
-    font-weight: 500;
-    font-size: var(--mainfont-size);
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--mainfontcolor);
-    text-decoration: none;
-    padding-right: 32px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 500;
+  font-size: var(--mainfont-size);
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--mainfontcolor);
+  text-decoration: none;
+  padding-right: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-header__submenu:hover,
 .main-header__submenu:focus {
@@ -63,45 +62,45 @@ a {
   color: var(--focus-active-hovercolor);
 }
 .current {
-    position: relative;
+  position: relative;
 }
 .current::after {
-    content: " ";
-    position: absolute;
-    bottom: -33px;
-    left: 0;
-    width: 66%;
-    height: 4px;
-    background-color: var(--focus-active-hovercolor);
-    border-radius: 2px;
+  content: " ";
+  position: absolute;
+  bottom: -33px;
+  left: 0;
+  width: 66%;
+  height: 4px;
+  background-color: var(--focus-active-hovercolor);
+  border-radius: 2px;
 }
-.main-header__list{
-    list-style: none;
-    display: flex;
-    gap: 50px;
-    margin: 0;
-    padding: 0;
+.main-header__list {
+  list-style: none;
+  display: flex;
+  gap: 50px;
+  margin: 0;
+  padding: 0;
 }
-.main-header__icons{
-    margin-right: 10px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.main-header__icons {
+  margin-right: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .main-header__icons:hover,
 .main-header__icons:focus {
-    color: var(--focus-active-hovercolor);
-  }
+  color: var(--focus-active-hovercolor);
+}
 .main-header__contacts {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: var(--mainfont-size);
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--shadowfontcolor);
-    text-decoration: none;
-    fill: var(--shadowfontcolor);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: var(--mainfont-size);
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--shadowfontcolor);
+  text-decoration: none;
+  fill: var(--shadowfontcolor);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-header__contacts:hover,
 .main-header__contacts:focus {
@@ -109,125 +108,309 @@ a {
   fill: var(--focus-active-hovercolor);
 }
 .footer-bg {
-    background: #2f303a;
-    display: flex;
-    justify-content: start;
-    flex-direction: row;
-    margin: 0;
+  background: #2f303a;
+  display: flex;
+  justify-content: start;
+  flex-direction: row;
+  margin: 0;
 }
 .footer-bg__logo {
-    font-family: Raleway;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    text-align: left;
-    color: var(--darkbd-fontcolor);
-    text-decoration: none;
+  font-family: Raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: var(--darkbd-fontcolor);
+  text-decoration: none;
 }
 .footer-bg__addres {
-    font-size: var(--mainfont-size);
-    line-height: 1.71;
-    font-style: normal;
-    letter-spacing: 0.03em;
-    color: var(--darkbd-fontcolor);
-    padding-top: 20px;
-    padding-bottom: 4.5px;
-    margin: 0;
+  font-size: var(--mainfont-size);
+  line-height: 1.71;
+  font-style: normal;
+  letter-spacing: 0.03em;
+  color: var(--darkbd-fontcolor);
+  padding-top: 20px;
+  padding-bottom: 4.5px;
+  margin: 0;
 }
 .footer-bg__contacts {
-    padding-block: 4.5px;
-    margin: 0;
-    transition: var(--animation-main);
+  padding-block: 4.5px;
+  margin: 0;
+  transition: var(--animation-main);
 }
 .footer-bg__contacts:hover {
-    transform: translate(20%);
+  transform: translate(20%);
 }
 .footer-bg__link {
-    color: rgba(255, 255, 255, 0.6);
-    font-size: var(--mainfont-size);
-    font-style: normal;
-    letter-spacing: 0.03em;
-    line-height: 1.71;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: rgba(255, 255, 255, 0.6);
+  font-size: var(--mainfont-size);
+  font-style: normal;
+  letter-spacing: 0.03em;
+  line-height: 1.71;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-bg__link:hover,
 .footer-bg__link:focus {
-    color: var(--focus-active-hovercolor);
+  color: var(--focus-active-hovercolor);
 }
-.footer-bg__join{
-    font-weight: 700;
-    font-size: var(--mainfont-size);
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #fff;
-    margin-bottom: 20px;
+.footer-bg__join {
+  font-weight: 700;
+  font-size: var(--mainfont-size);
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 20px;
 }
-.footer-bg__form{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-content: center;
-    gap: 12px;
+.footer-bg__form {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  gap: 12px;
 }
 .footer-bg__input {
-    width: 358px;
-    height: 50px;
-    background-color: #2f303a;
-    padding: 15px 16px;
-    border-radius: 4px;
-    color: var(--darkbd-fontcolor);
+  width: 358px;
+  height: 50px;
+  background-color: #2f303a;
+  padding: 15px 16px;
+  border-radius: 4px;
+  color: var(--darkbd-fontcolor);
 }
 .footer-bg__icons {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    padding: 0;
-    gap: 10px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  gap: 10px;
 }
-.footer-bg__social{
-    display: block;
-    width: 44px;
-    height: 44px;
-    margin: 0;
-    border-radius: 50%;
-    fill: var(--darkbd-fontcolor);
-    background: rgba(255, 255, 255, 0.1);
-    transition: var(--animation-main),
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.footer-bg__social {
+  display: block;
+  width: 44px;
+  height: 44px;
+  margin: 0;
+  border-radius: 50%;
+  fill: var(--darkbd-fontcolor);
+  background: rgba(255, 255, 255, 0.1);
+  transition: var(--animation-main),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-bg__social use {
-    display: block;
-    transform: translate(25%, 25%);
+  display: block;
+  transform: translate(25%, 25%);
 }
 .footer-bg__social:hover,
 .footer-bg__social:focus {
-    background-color: var(--focus-active-hovercolor);
-    cursor: pointer;
-    transform: scale(0.9);
+  background-color: var(--focus-active-hovercolor);
+  cursor: pointer;
+  transform: scale(0.9);
 }
-.footer-bg__send-icon{
-    position: absolute;
-    top: 13px;
-    right: 28px;
+.footer-bg__send-icon {
+  position: absolute;
+  top: 13px;
+  right: 28px;
 }
-.footer-bg__send-email{
-    background-color: var(--focus-active-hovercolor);
-    color: var(--darkbd-fontcolor);
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    fill: var(--darkbd-fontcolor);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    transition: var(--animation-main);
+.footer-bg__send-email {
+  background-color: var(--focus-active-hovercolor);
+  color: var(--darkbd-fontcolor);
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  fill: var(--darkbd-fontcolor);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  transition: var(--animation-main);
 }
 .footer-bg__send-email:hover,
 .footer-bg__send-email:focus {
-   transform: scale(0.9);
+  transform: scale(0.9);
+}
+.main-button-space {
+  background-color: #2f303a;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/main-bg-picture.jpg);
+  background-size: 1600px;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main-button-space__text {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--darkbd-fontcolor);
+  margin: 0;
+  padding-top: 200px;
+  padding-bottom: 30px;
+}
+.main-button-space__button {
+  background-color: var(--focus-active-hovercolor);
+  color: var(--darkbd-fontcolor);
+  font-weight: 700;
+  line-height: 1.875;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 41px;
+  margin-bottom: 200px;
+  transition: var(--animation-main);
+}
+.main-button-space__button:hover {
+  transform: scale(1.1);
+}
+.modal {
+  width: 100vw;
+  height: 100vw;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  visibility: visible;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2;
+}
+.modal-win {
+  width: 528px;
+  height: 581px;
+  position: fixed;
+  background-color: var(--darkbd-fontcolor);
+  visibility: visible;
+  display: block;
+  border-radius: 4px;
+  transition: var(--animation-main);
+}
+.modal .modal-win {
+  transform: translate(0, 0) scale(1);
+}
+.modal-win__context {
+  display: flex;
+  flex-direction: column;
+  padding-inline: 40px;
+  width: 528px;
+  height: 581px;
+}
+.modal-win__close-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  padding: 6px;
+  background-color: var(--darkbd-fontcolor);
+  cursor: pointer;
+  z-index: 1;
+  top: 8px;
+  right: 8px;
+}
+.modal-win__text {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  line-height: 1.15;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.form > label {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.form .form__input {
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: none;
+}
+.form .form__input:active,
+.form .form__input:focus {
+  border-color: var(--focus-active-hovercolor);
+  outline: none;
+  fill: var(--focus-active-hovercolor);
+}
+.form__space {
+  position: relative;
+}
+.form__space:focus-within .form-icons,
+.form__space:active .form-icons {
+  fill: var(--focus-active-hovercolor);
+  outline: none;
+  outline-offset: 0px;
+}
+.form__icons {
+  position: absolute;
+  margin: 11px 12px;
+  top: 26px;
+  transform: translateY(-50%);
+}
+.form__icon-size {
+  height: 100%;
+  width: 100%;
+}
+.form__label-text {
+  margin: 0;
+  margin-bottom: 4px;
+  font-size: 12px;
+  color: var(--shadowfontcolor);
+  line-height: 1.16;
+}
+.form__input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 2px;
+}
+.form_textarea {
+  height: 120px;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  padding: 12px 16px;
+}
+.form_textarea:focus,
+.form_textarea:active,
+.form_textarea:hover {
+  border-color: var(--focus-active-hovercolor);
+  outline: none;
+}
+.form__checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  position: relative;
+}
+.form__checkbox-custom {
+  height: 15px;
+  width: 16px;
+  background-color: var(--darkbd-fontcolor);
+  border-radius: 2px;
+  position: relative;
+  visibility: hidden;
+}
+.form__checkbox-custom:checked + label .checkbox-icon {
+  visibility: visible;
+  background-color: var(--focus-active-hovercolor);
+  fill: var(--darkbd-fontcolor);
 }
