--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ a {
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
-.box-icons {
+.lower-main__icons {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -166,10 +166,10 @@ a {
   padding: 16px 32px;
   background-color: var(--darkbd-fontcolor);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.box-icons:hover,
-.box-icons:focus {
+.lower-main__icons:hover,
+.lower-main__icons:focus {
   fill: var(--focus-active-hovercolor);
   border-color: var(--focus-active-hovercolor);
   cursor: pointer;
@@ -385,7 +385,7 @@ a {
   gap: 7px;
   position: relative;
 }
-.checkbox-text {
+.form__checkbox-text {
   font-size: var(--mainfont-size);
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -400,7 +400,7 @@ a {
   position: relative;
   visibility: hidden;
 }
-.checkbox-icon {
+.form__checkbox-icon {
   visibility: hidden;
   position: absolute;
   fill: var(--darkbd-fontcolor);
@@ -408,12 +408,12 @@ a {
   left: -1px;
   border-radius: 2px;
 }
-.form__checkbox-custom:checked + label .checkbox-icon {
+.form__checkbox-custom:checked + label .form__checkbox-icon {
   visibility: visible;
   background-color: var(--focus-active-hovercolor);
   fill: var(--darkbd-fontcolor);
 }
-.label-size {
+.form__checkbox__label {
   position: absolute;
   height: 15px;
   width: 16px;
@@ -422,7 +422,7 @@ a {
   border: 1px solid var(--mainfontcolor);
   border-radius: 2px;
 }
-.checkbox-text > a {
+.form__checkbox-text > a {
   color: var(--focus-active-hovercolor);
   text-decoration: underline;
 }
@@ -443,7 +443,7 @@ a {
 .main-header__icons:focus {
   color: var(--focus-active-hovercolor);
 }
-.upper-body {
+.upper-main {
   background-color: var(--darkbd-fontcolor);
 }
 .pic-title {
@@ -515,7 +515,7 @@ a {
   align-items: center;
   flex-direction: column;
 }
-.lorem-bg {
+.upper-main__lorem-img {
   background-color: #f5f4fa;
   width: 270px;
   height: 120px;
@@ -529,7 +529,7 @@ a {
   padding-top: 16px;
   padding-bottom: 30px;
 }
-.text-title {
+.upper-main__title {
   font-weight: 700;
   font-size: var(--mainfont-size);
   line-height: 1.14;
@@ -537,13 +537,13 @@ a {
   text-transform: uppercase;
   margin: 0;
 }
-.text {
+.upper-main__text {
   font-size: var(--mainfont-size);
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--shadowfontcolor);
 }
-.head-text {
+.main-middle__head-text{
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -553,7 +553,17 @@ a {
   margin-top: 0;
   margin-bottom: 50px;
 }
-.pic-people {
+.main__head-text{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.main__names {
   font-weight: 500;
   line-height: 1.1875;
   letter-spacing: 0.03em;
@@ -562,7 +572,7 @@ a {
   padding-top: 30px;
   text-align: center;
 }
-.ppl-jobs {
+.main__jobs {
   line-height: 1.1875;
   letter-spacing: 0.03em;
   color: var(--shadowfontcolor);
@@ -580,21 +590,21 @@ a {
   padding-top: 200px;
   padding-bottom: 30px;
 }
-.images {
+.main-middle__images {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
 }
-.img-bg {
+.main-middle {
   padding-top: 93px;
 }
-.img-label {
+.main-middle__label{
   position: relative;
   width: 370px;
   height: 294px;
 }
-.img-label > .label {
+.main-middle__label > .main-middle__label-text {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -610,7 +620,7 @@ a {
   text-transform: uppercase;
   cursor: pointer;
 }
-.about {
+.upper-main__about {
   display: flex;
   list-style: none;
   justify-content: center;
@@ -618,18 +628,18 @@ a {
   gap: 30px;
   padding: 0;
 }
-.workers {
+.main__workers {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.body-style {
+.wrapper {
   background: #e5e5e5;
 }
-.mid-body {
+.main {
   background-color: #f5f4fa;
 }
-.team-card {
+.main__team-card {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -649,11 +659,11 @@ a {
 .main-content-color {
   background: var(--darkbd-fontcolor);
 }
-.lower-body {
+.lower-main {
   background-color: var(--darkbd-fontcolor);
   padding-inline: 215px;
 }
-.lower-icons {
+.lower-main__box{
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -708,6 +718,16 @@ a {
 .footer-bg__contacts:hover {
   transform: translate(20%);
 }
+.lower-main__head-text{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  margin-top: 0;
+  margin-bottom: 50px;
+}
 .footer-bg__join{
   font-weight: 700;
   font-size: var(--mainfont-size);
@@ -724,14 +744,14 @@ a {
   align-items: baseline;
   gap: 70px;
 }
-.footer-bg__icons {
+.main__icons {
   list-style: none;
   display: flex;
   flex-direction: row;
   padding: 0;
   gap: 10px;
 }
-.social-media {
+.main__social-media {
   display: block;
   width: 44px;
   height: 44px;
@@ -739,15 +759,15 @@ a {
   border-radius: 50%;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-media use {
+.main__social-media use {
   display: block;
   transform: translate(25%, 25%);
 }
-.social-media:hover,
-.social-media:focus {
+.main__social-media:hover,
+.main__social-media:focus {
   fill: var(--darkbd-fontcolor);
   background-color: var(--focus-active-hovercolor);
   cursor: pointer;
@@ -762,7 +782,7 @@ a {
   fill: var(--darkbd-fontcolor);
   background: rgba(255, 255, 255, 0.1);
   transition: var(--animation-main),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-bg__social use {
   display: block;
@@ -821,7 +841,13 @@ a {
   top: 13px;
   right: 28px;
 }
-
+.footer-bg__icons {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  gap: 10px;
+}
 .send-email {
   background-color: var(--focus-active-hovercolor);
   color: var(--darkbd-fontcolor);
