--- a/sass/main.scss
+++ b/sass/main.scss
@@ -195,7 +195,7 @@ a {
   fill: var(--darkbd-fontcolor);
   background: rgba(255, 255, 255, 0.1);
   transition: var(--animation-main),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-bg__social use {
   display: block;
@@ -409,8 +409,240 @@ a {
   position: relative;
   visibility: hidden;
 }
-.form__checkbox-custom:checked + label .checkbox-icon {
+.form__checkbox-custom:checked + label .form__checkbox-icon {
   visibility: visible;
   background-color: var(--focus-active-hovercolor);
   fill: var(--darkbd-fontcolor);
+}
+.form__checkbox__label {
+  position: absolute;
+  height: 15px;
+  width: 16px;
+  top: 2px;
+  left: 8px;
+  border: 1px solid var(--mainfontcolor);
+  border-radius: 2px;
+}
+.form__checkbox-icon {
+  visibility: hidden;
+  position: absolute;
+  fill: var(--darkbd-fontcolor);
+  top: -1px;
+  left: -1px;
+  border-radius: 2px;
+}
+.form__checkbox-text {
+  font-size: var(--mainfont-size);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--shadowfontcolor);
+  margin: 0;
+}
+.form__checkbox-text > a {
+  color: var(--focus-active-hovercolor);
+  text-decoration: underline;
+}
+.form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 76px;
+  background-color: var(--focus-active-hovercolor);
+  color: var(--darkbd-fontcolor);
+  margin-inline: 124px;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  font-size: 16px;
+}
+.wrapper {
+  background: #e5e5e5;
+}
+.upper-main {
+  background-color: var(--darkbd-fontcolor);
+}
+.upper-main__about {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 0;
+}
+.upper-main__lorem-img {
+  background-color: #f5f4fa;
+  width: 270px;
+  height: 120px;
+  padding-block: 25px;
+  padding-inline: 100px;
+  margin-bottom: 30px;
+}
+.upper-main__title {
+  font-weight: 700;
+  font-size: var(--mainfont-size);
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin: 0;
+}
+.upper-main__text {
+  font-size: var(--mainfont-size);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--shadowfontcolor);
+}
+.main-middle {
+  padding-top: 93px;
+}
+.main-middle__head-text{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.main-middle__images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.main-middle__label{
+  position: relative;
+  width: 370px;
+  height: 294px;
+}
+.main-middle__label > .main-middle__label-text {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 26px 90px;
+  margin: 0;
+  font-weight: 700;
+  text-align: center;
+  font-size: var(--mainfont-size);
+  color: var(--darkbd-fontcolor);
+  background-color: rgba(47, 48, 58, 0.8);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.main {
+  background-color: #f5f4fa;
+}
+.main__head-text{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.main__workers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main__team-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin: 0 15px;
+}
+.main__names {
+  font-weight: 500;
+  line-height: 1.1875;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  margin: 0;
+  padding-top: 30px;
+  text-align: center;
+}
+.main__jobs {
+  line-height: 1.1875;
+  letter-spacing: 0.03em;
+  color: var(--shadowfontcolor);
+  text-align: center;
+}
+.main__icons {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  gap: 10px;
+}
+.main__social-media {
+  display: block;
+  width: 44px;
+  height: 44px;
+  margin: 0;
+  border-radius: 50%;
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.main__social-media use {
+  display: block;
+  transform: translate(25%, 25%);
+}
+.main__social-media:hover,
+.main__social-media:focus {
+  fill: var(--darkbd-fontcolor);
+  background-color: var(--focus-active-hovercolor);
+  cursor: pointer;
+  transform: scale(1.3) rotate(360deg);
+}
+.lower-main {
+  background-color: var(--darkbd-fontcolor);
+  padding-inline: 215px;
+}
+.lower-main__box{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
+  list-style: none;
+  padding: 0;
+}
+.lower-main__head-text{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--mainfontcolor);
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.lower-main__icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #afb1b8;
+  fill: #afb1b8;
+  border-radius: 5%;
+  box-sizing: border-box;
+  padding: 16px 32px;
+  background-color: var(--darkbd-fontcolor);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.lower-main__icons:hover,
+.lower-main__icons:focus {
+  fill: var(--focus-active-hovercolor);
+  border-color: var(--focus-active-hovercolor);
+  cursor: pointer;
 }
