--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,6 @@
-@use "./utils/variables.scss" as *;
-@import "./components/navigations.scss";
-@import "./components/global.scss";
+@use "./utils/_variables.scss" as *;
+@import "./components/_navigations.scss";
+@import "./components/_global.scss";
+@import "./components/_header.scss";
+@import "./components/_footer.scss";
+@import "./components/_main-button-space.scss";
