--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,5 @@
 @import "./components/_global.scss";
 @import "./components/_header.scss";
 @import "./components/_footer.scss";
-@import "./components/_main-button-space.scss";
+@import "./components/_button-space.scss";
+@import "./components/_modal.scss";
