--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,3 +4,4 @@
     $darkbd-fontcolor: #fff;
     $shadowfontcolor: #757575;
     $animation-main: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    $form-gap: 10px;
