--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,8 @@
 @import "./components/_header.scss";
 @import "./components/_footer.scss";
 @import "./components/_button.scss";
-@import "./components/_upper.scss";
-@import "./components/_main-middle.scss";
-@import "./components/_main.scss";
-@import "./components/_lower.scss";
+@import "./components/_lorem.scss";
+@import "./components/_about-us.scss";
+@import "./components/_our-team.scss";
+@import "./components/_our-customers.scss";
 @import "./components/_port-main.scss";
