--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -28,6 +28,7 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     margin: 0 15px;
+    background-color: $darkbd-fontcolor;
   }
 
   &__names {
